# visoma-cli

./: Cargo.toml  README.adoc
.github/workflows/: release.yml
container/: Containerfile  build.sh  run.sh
src/: lib.rs  main.rs
tests/: integration_test.rs
