[package]
name = "visoma-cli"
version = "0.10.0"
edition = "2021"
authors = ["Andreas Longo <git@andreaslongo.com>"]
license = "GPL-3.0-or-later"
repository = "https://github.com/andreaslongo/visoma-cli"
description = "A CLI utility for interacting with Visoma"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.7", features = ["derive"] }
###############################################################################
# CLI
###############################################################################
# anstream = "0.6.4"
# clap = { version = "4.4.6", features = ["derive"] }
# human-panic = "1.2.1"
# owo-colors = "3.5.0"

# # Config file
# serde_yaml = "0.9.34"

###############################################################################
# Web
###############################################################################
# # Web framework
# axum = "0.7.4"
# serde = { version = "1.0.196", features = ["derive"] }
# tokio = { version = "1.36.0", features = ["rt-multi-thread"] }
# # Templating and serving static files
# minijinja = { version = "1.0.12", features = ["loader"] }
# tower-http = { version = "0.5.1", features = ["fs"] }
# # Auth
# axum-extra = { version = "0.9.2", features = ["cookie"] }
# jsonwebtoken = "9.3.0"
# time = { version = "0.3.34", features = ["serde"] }
# # Utils
# uuid = { version = "1.7.0", features = ["serde", "v4"] }

[dev-dependencies]
assert_cmd = "2.0.14"
predicates = "3.1.0"
# # Web tests
# tower-service = "0.3.2"
